fix logo on mobile

--- a/themes/blog/assets/scss/components/_logo.scss
+++ b/themes/blog/assets/scss/components/_logo.scss
@@ -30,6 +30,7 @@
   &:before {
     width: 100%;
     height: 2px;
+    left: 0;
   }
   &:after {
     width: 2px;
